# StubidSLAM

./: CMakeLists.txt
config/: default.yaml
include/: camera.hpp  config.hpp  frame.hpp  landmark.hpp  map.hpp  odometry.hpp
src/: run_ov.cpp
test/: test1.cpp
